2010-09-11  Ivan Maidanski <ivmai@mail.ru>

	* dyn_load.c (DL_ITERATE_PHDR_STRONG): New macro (define for
	FreeBSD).
	* dyn_load.c (GC_register_main_static_data): Move the definition
	above GC_register_dynamic_libraries_dl_iterate_phdr one (FreeBSD
	case); unconditionally return FALSE if DL_ITERATE_PHDR_STRONG.
	* dyn_load.c (GC_register_dynamic_libraries_dl_iterate_phdr): Test
	GC_register_main_static_data() result (instead of direct testing
	of dl_iterate_phdr (to prevent a compiler warning).
	* os_dep.c (CODE_OK): Test si_code also for the value of 2
	(FreeBSD case; required for FreeBSD v7+).
	* os_dep.c (CODE_OK): Properly use parentheses (HPUX case).
	* include/private/gcconfig.h (DATASTART): Cast etext argument in
	GC_FreeBSDGetDataStart() call; remove unnecessary "&" (FreeBSD
	case).

2010-09-09  Ivan Maidanski <ivmai@mail.ru> (with input from Ludovic Courtes)

	* include/private/specific.h (quick_thread_id): Define thru
	GC_approx_sp(); define as a macro.
	* include/private/specific.h (getspecific): Use GC_INLINE instead
	of __inline__ (to work around Sun CC which does not recognize
	inline keyword surrounded with underscores).
	* include/private/specific.h: Expand all tabs to spaces; remove
	trailing spaces at EOLn.

2010-09-04  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (FindTopOfStack): Simplify condition
	expressions.
	* darwin_stop_world.c (GC_push_all_stacks): Merge two variants
	of this function (DARWIN_DONT_PARSE_STACK).
	* darwin_stop_world.c (GC_push_all_stacks): Add a check for our
	thread is found (same as in pthread_stop_world.c).
	* darwin_stop_world.c (GC_push_all_stacks): Print the number of
	scanned threads if verbose (same as in pthread_stop_world.c).

2010-09-04  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_push_all_stacks): Reset
	thread_state_count value before every thread_get_state call;
	refine the comment for thread_state_count.
	* darwin_stop_world.c (GC_push_all_stacks): Ignore rsp, rip/eip,